RESOLVED FIXED32008
[Chromium] Keyboard shortcut in dropdown not working.
https://bugs.webkit.org/show_bug.cgi?id=32008
Summary [Chromium] Keyboard shortcut in dropdown not working.
James Su
Reported 2009-11-30 22:20:09 PST
See chromium issue: http://crbug.com/28776: Chrome Version : 4.0.257.0~svn20091124r32926-0ubuntu1~ucd1 OS + version : Ubuntu 9.10 CPU architecture (32-bit / 64-bit): 32-bit window manager : Gnome URLs (if applicable) : http://www.xe.com/ Behavior in Firefox 3.x (if applicable): OK Behavior in Chrome for Windows (optional): OK What steps will reproduce the problem? 1. Enter http://www.xe.com/ 2. Click on the dropdown to select currency 3. Type the first letter of a currency, for example E (for EUR) What is the expected result? EUR should be selected. What happens instead? Nothing. The only way to change the dropdown with the keyboard is using the arrows.
Attachments
Patch to fix this issue. (1.85 KB, patch)
2009-11-30 22:34 PST, James Su
no flags
Patch to fix this issue. (1.95 KB, patch)
2009-11-30 23:49 PST, James Su
no flags
Patch to fix this issue. (3.03 KB, patch)
2009-12-01 03:10 PST, James Su
no flags
James Su
Comment 1 2009-11-30 22:34:12 PST
Created attachment 44055 [details] Patch to fix this issue.
WebKit Review Bot
Comment 2 2009-11-30 22:38:44 PST
style-queue ran check-webkit-style on attachment 44055 [details] without any errors.
Evan Martin
Comment 3 2009-11-30 23:22:50 PST
[I am not a WebKit reviewer.] This seems fine to me. Is there a way to test this? Can you make the description of what you're fixing more specific in the ChangeLog? (For someone who doesn't know what "keyboard shortcut" means -- I think you mean that pressing a key currently doesn't select the entry starting with that letter?)
James Su
Comment 4 2009-11-30 23:49:51 PST
Created attachment 44058 [details] Patch to fix this issue.
WebKit Review Bot
Comment 5 2009-11-30 23:52:41 PST
style-queue ran check-webkit-style on attachment 44058 [details] without any errors.
James Su
Comment 6 2009-11-30 23:54:01 PST
I updated the ChangeLog a little. The "keyboard shortcut" is actually not accurate. This issue is about the "type ahead find" feature of the popup listbox, or so called prefix search: you can type in a popup listbox to search the items by prefix. It works on Chromium windows port. The attached patch fixes the Linux and Mac ports.
Hironori Bono
Comment 7 2009-12-01 01:49:14 PST
(In reply to comment #3) > [I am not a WebKit reviewer.] This seems fine to me. > > Is there a way to test this? If I recall correctly, we need to change eventSender (and some other code) to write a layout test for this issue so PopupMenu can receive keyboard events sent from eventSender. Even though I have been writing a change to dispatch keyboard events from eventSender to PopupMenu, it is not a high priority issue. (This is the reason why I have not sent any fixes for this issue.) So, I wish James also changes eventSender and adds layout tests. Regards,
James Su
Comment 8 2009-12-01 02:05:29 PST
(In reply to comment #7) > (In reply to comment #3) > > [I am not a WebKit reviewer.] This seems fine to me. > > > > Is there a way to test this? > > If I recall correctly, we need to change eventSender (and some other code) to > write a layout test for this issue so PopupMenu can receive keyboard events > sent from eventSender. Even though I have been writing a change to dispatch > keyboard events from eventSender to PopupMenu, it is not a high priority issue. > (This is the reason why I have not sent any fixes for this issue.) So, I wish > James also changes eventSender and adds layout tests. > > Regards, I'm not familiar with this part. I'd very appreciate if you could help on it.
James Su
Comment 9 2009-12-01 03:10:28 PST
Created attachment 44063 [details] Patch to fix this issue. Merged the case-sensitive type ahead find fix from WebCore/dom/SelectElement.cpp. See https://bugs.webkit.org/show_bug.cgi?id=29103.
WebKit Review Bot
Comment 10 2009-12-01 03:15:40 PST
style-queue ran check-webkit-style on attachment 44063 [details] without any errors.
Darin Fisher (:fishd, Google)
Comment 11 2009-12-22 19:50:50 PST
Comment on attachment 44063 [details] Patch to fix this issue. r=me, but given this and other recent bug fixes in the popup menu code, I think it would be great to invest time in enabling layout tests for this code.
WebKit Commit Bot
Comment 12 2009-12-22 19:59:32 PST
Comment on attachment 44063 [details] Patch to fix this issue. Clearing flags on attachment: 44063 Committed r52519: <http://trac.webkit.org/changeset/52519>
WebKit Commit Bot
Comment 13 2009-12-22 19:59:41 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.